...

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get appTitle => 'Entrelace';

  @override
  String get appSubtitle => 'Your relationship journey together';

  @override
  String get login => 'Login';
...
  String get signInAgain => 'Sign in again';

  @override
  String get invitePartner => 'Invite Partner';

  @override
  String get inviteYourPartner => 'Invite Your Partner';

  @override
  String get sendInvitation => 'Send Invitation';

  @override
  String get invitePartnerDescription =>
...
  String get pleaseEnterPassword => 'Please enter your password';

  @override
  String get signIn => 'Sign In';

  @override
  String get noAccountSignUp => 'Don\'t have an account? Sign up';

  @override
  String get loginJoinedPartner =>
      'Successfully logged in and joined your partner!';

  @override
  String get loginFailed => 'Login failed';

  @override
  String get createAccount => 'Create Account';

  @override
  String get joinApp => 'Join Entrelace';

  @override
  String get startJourneyBetterComm =>
...
  String get freeTrialInfo => '7-day free trial • Cancel anytime';

  @override
  String get currentPlanButton => 'Current Plan';

  @override
  String get continueWithFree => 'Continue with Free';

  @override
  String get startFreeTrial => 'Start Free Trial';

  @override
  String get perMonth => '/month';
...
